Update Blog “2019-06-20-test-6”

--- a/content/blog/2019-06-20-test-6.md
+++ b/content/blog/2019-06-20-test-6.md
@@ -5,3 +5,9 @@ date: 2019-06-20T16:47:48.441Z
 thumbnail: /images/uploads/grumpycat.png
 ---
 Test 6
+
+![image1](/images/uploads/bxa1vi7gucj.jpg)
+
+
+
+![image2](/images/uploads/bpkg3lhakey.jpg)
